# LandPPT

./: .dockerignore  .env.docker  .env.example  .gitignore  CHART_VERIFICATION_FIX_SUMMARY.md  CONTRIBUTING.md  Dockerfile  Dockerfile.alpine  Dockerfile.python-only  Dockerfile.simple  Dockerfile.ubuntu  LICENSE  Makefile  PDF_CONVERTER_OPTIMIZATION_SUMMARY.md  README.md  README_CN.md  README_EN.md  REGENERATE_OUTLINE_FIX.md  SLIDE_FIX_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  docker-healthcheck.sh  exceptions.py  pyproject.toml  requirements-docker.txt  run.py  setup_database.py  simple_test_dimensions.py  test_ai_image_dimensions.py  test_beautifulsoup_validation.py  test_html_auto_fix.py  test_html_validation.py  test_parser_fix_optimization.py  test_query_truncation.py  uv.toml  断点续生功能实现说明.md
docs/: base_url_configuration.md  prompt_language_optimization_summary.md  prompt_optimization_summary.md  uv-guide.md
scripts/: setup.bat  setup.py  setup.sh
src/landppt/: main.py
src/landppt/ai/: __init__.py  base.py  providers.py
src/landppt/api/: config_api.py  global_master_template_api.py  image_api.py  landppt_api.py  models.py
src/landppt/auth/: middleware.py  routes.py
src/landppt/core/: config.py  exceptions.py
src/landppt/database/: create_default_template.py  database.py  models.py  repositories.py  service.py
src/landppt/services/: config_service.py  db_project_manager.py  deep_research_service.py  enhanced_ppt_service.py  file_processor.py  global_master_template_service.py  pdf_to_pptx_converter.py  ppt_image_processor.py  ppt_service.py  pyppeteer_pdf_converter.py  service_instances.py  speech_script_repository.py  speech_script_service.py
src/landppt/web/: routes.py
src/summeryanyfile/: __init__.py
template_examples/: 中式书卷风.json
(+49 files in other folders)
