[project]
name = "landppt"
version = "0.1.0"
description = "AI-powered PPT generation platform with OpenAI-compatible API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "httpx>=0.25.0",
    "markdown>=3.5.1",
    "python-docx>=1.1.0",
    "pypdf2>=3.0.1",
    "requests>=2.31.0",
    # Database libraries
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "aiosqlite>=0.19.0",
    # AI and LLM libraries
    "openai>=1.0.0",
    "anthropic>=0.7.0",
    "google-generativeai>=0.3.0",
    "ollama>=0.1.0",
    "transformers>=4.35.0",
    "torch>=2.0.0",
    "tiktoken>=0.5.0",
    "aiohttp>=3.12.4",
    "pdfkit>=1.0.0",
    "langchain>=0.1.0",
    "langchain-core>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "langchain-ollama>=0.1.0",
    "langchain-google-genai>=1.0.0",
    "langgraph>=0.1.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "chardet>=5.0.0",
    "pypdf>=4.0.0",
    "python-docx>=1.1.0",
    "pandas>=2.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "markdown>=3.5.0",
    "rich>=13.0.0",
    "pydantic-settings>=2.0.0",
    "tavily-python>=0.7.8",
    "mineru[core]>=2.0.6",
    "markitdown[all]>=0.1.2",
    "onnxruntime==1.19.2",
    "pyppeteer>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/landppt"]
sources = ["src"]  

[tool.hatch.pypi]
extra-index-urls = ["https://pypi.apryse.com"]  



